# fastapi-starter

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
http_test/: http-client.env.json  media_local.http  poi_local.http
res/: config.yml  config_dev.yml  config_local.yml
src/: app.py  run.py
src/common/: env.py  response.py  uuid.py
src/component/: FileManager.py  LogManager.py  SqlConnectorManager.py
src/dao/: MediaDao.py  PoiDao.py  PoiWIdentifiedImageDao.py
src/entity/dto/: media_dto.py  poi_dto.py
src/entity/po/: BasePo.py  MediaPo.py  PoiIdentifyImagePo.py  PoiPo.py  PoiWIdentifyImagePo.py
src/route/: demo.py  media_v1.py  poi_v1.py  res_v1.py  user_v1.py
src/service/: ImageRecService.py  MatchService.py  MediaService.py  PoiService.py
