[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["Hansen <xxx@xxx.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
pytest = "^8.3.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
opencv-python = "^4.10.0.84"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
